--- a/index.html
+++ b/index.html
@@ -119,22 +119,30 @@
         <h2>Compétences</h2>
         <div class="skills-grid">
           <div class="skill-card glass">
-            <i class="fa-solid fa-code"></i>
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M14.23 12.004a2.236 2.236 0 0 0 .406-1.209c0-1.237-1.002-2.24-2.24-2.24a2.24 2.24 0 0 0-2.24 2.24c0 .882.51 1.654 1.254 2.017l.03.015c.582.29 1.187.54 1.79.75zm2.648-10.69c-1.346 0-3.107.96-4.888 2.622-1.78-1.653-3.542-2.602-4.887-2.602a4.12 4.12 0 0 0-4.12 4.12c0 1.946.84 3.766 2.227 5.068C3.495 11.643 2 13.96 2 16.5c0 3.59 2.91 6.5 6.5 6.5 1.46 0 2.807-.48 3.917-1.297A6.473 6.473 0 0 0 16.5 23c3.59 0 6.5-2.91 6.5-6.5 0-2.54-1.495-4.857-3.948-6.058 1.387-1.302 2.227-3.122 2.227-5.068a4.12 4.12 0 0 0-4.12-4.12zM6.5 20c-1.933 0-3.5-1.567-3.5-3.5 0-1.602.95-2.98 2.334-3.59l.02-.008c.482-.24.99-.47 1.516-.69l.03-.013c.967-.43 1.96-.74 2.6-.74.64 0 1.633.31 2.6.74l.03.013c.526.22 1.034.45 1.516.69l.02.008C15.05 13.52 16 14.898 16 16.5c0 1.933-1.567 3.5-3.5 3.5-.64 0-1.633-.31-2.6-.74l-.03-.013c-.526-.22-1.034-.45-1.516-.69l-.02-.008C8.95 18.52 8 19.898 8 21.5c0 1.933 1.567 3.5 3.5 3.5s3.5-1.567 3.5-3.5c0-1.602-.95-2.98-2.334-3.59l-.02-.008c-.482-.24-.99-.47-1.516-.69l-.03-.013c-.967-.43-1.96-.74-2.6-.74z" fill="currentColor"/>
+            </svg>
             <h4>Développement Web</h4>
             <p>HTML, CSS, JS, React, Tailwind, performance</p>
           </div>
           <div class="skill-card glass">
-            <i class="fa-solid fa-server"></i>
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm0 2v14h14V5H5zm2 2h10v2H7V7zm0 4h10v2H7v-2zm0 4h7v2H7v-2z" fill="currentColor"/>
+            </svg>
             <h4>Backend</h4>
             <p>Node.js, Express, Java, APIs REST, authentification</p>
           </div>
           <div class="skill-card glass">
-            <i class="fa-solid fa-mobile-screen-button"></i>
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M17 19H7V5h10v14zm0-16H7a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2zM12 2a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" fill="currentColor"/>
+            </svg>
             <h4>Mobile</h4>
             <p>Android (Java), expériences utilisateur natives</p>
           </div>
           <div class="skill-card glass">
-            <i class="fa-solid fa-shield-halved"></i>
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" fill="currentColor"/>
+            </svg>
             <h4>Sécurité & CI</h4>
             <p>Bonnes pratiques, tests unitaires, déploiement CI/CD</p>
           </div>
@@ -287,7 +295,9 @@
 
   <!-- Floating WhatsApp -->
   <a class="whatsapp-fab" href="https://wa.me/221763348279" target="_blank" aria-label="WhatsApp">
-    <i class="fab fa-whatsapp"></i>
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488"/>
+    </svg>
   </a>
 
   <!-- Project Modal (simple) -->
